# watr

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  file_header.txt  genesis-state  genesis-wasm  mainnet-draft.json  mainnet-dry-run.json  mainnet-final.json  package-lock.json  package.json  rococo-local-raw.json  rococo-local.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: build-binary.yml  build-docker.yml  manual-build-srtool.yml  manual-devnet-srtool.yml  publish-docker.yml  test-and-lint.yml  try-runtime-devnet.yml
chain-specs/: devnet-raw.json  devnet.json  mainnet-raw.json  mainnet.json  seedling-dry-run.json  seedling-raw.json  seedling.json
client/evm-tracing/: Cargo.toml
client/evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs  mod.rs  raw.rs  trace_filter.rs
client/evm-tracing/src/listeners/: call_list.rs  mod.rs  raw.rs
client/evm-tracing/src/types/: block.rs  mod.rs  serialization.rs  single.rs
docker/: Dockerfile  README.md  watr-parachain.Dockerfile  watr_builder.Dockerfile
docker/scripts/: inject_bootnodes.sh
docs/: benchmarks.md  collator-selection-pot.md  deployment.md  integration-tests.md  substrate-evm-funds-transfer.md  watr-did-pallet.md  watr-release-guide.md
docs/connecting-metamask/: connecting-metamask.md
docs/cross-chain-assets-transfer/: cross-chain-assets-transfer.md
docs/governance/: watr-governance-guide.md
integration-tests/customs/: compile.d.ts  compile.js  compile.js.map  read-xc20-custom.d.ts  read-xc20-custom.js  read-xc20-custom.js.map  transfer-xc20-custom.d.ts  transfer-xc20-custom.js  transfer-xc20-custom.js.map
integration-tests/customs/did/: add-did-services-custom.js  compile.js  compile.ts  create-did-custom.js  create-did-custom.ts  issue-did-credentials-custom.js  remove-did-custom.js  remove-did-services-custom.js  revoke-did-credentials-custom.js  setup.js  update-did-custom.js
integration-tests/customs/xcm/: compile.ts
integration-tests/runtimes/devnet/: config.toml
integration-tests/runtimes/devnet/precompiles/: 1_watr-did.yml
integration-tests/runtimes/devnet/xcm/: 0_init.yml  1_hrmp-open-channels.yml  2_stmt-reserve-transfer.yml  3_watr-send-to-reserve.yml  4_watr-xc-20.yml  5_watr-xcm-send.yml  6_watr-teleport.yml  7_watr-reserve-transfer.yml  8_stmt-teleport.yml
integration-tests/runtimes/mainnet/: config.toml
integration-tests/runtimes/mainnet/xcm/: 0_init.yml  1_hrmp-open-channels.yml  2_stmt-reserve-transfer.yml  3_watr-send-to-reserve.yml  4_watr-xc-20.yml  5_watr-xcm-send.yml  6_watr-teleport.yml  7_watr-reserve-transfer.yml  8_stmt-teleport.yml
node/: Cargo.toml  build.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: mod.rs  watr.rs  watr_devnet.rs
pallets/collator-selection/: Cargo.toml
pallets/collator-selection/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/did/: Cargo.toml  README.md
pallets/did/src/: benchmarking.rs  errors.rs  lib.rs  mock.rs  tests.rs  types.rs  verification.rs  weights.rs
pallets/motion/: Cargo.toml  README.md
pallets/motion/src/: lib.rs  mock.rs  tests.rs
polkadot-launch/: config.json
precompiles/assets-erc20/: Cargo.toml
precompiles/assets-erc20/src/: lib.rs  mock.rs  tests.rs
precompiles/did/: Cargo.toml  WatrDID.sol
precompiles/did/src/: lib.rs  mock.rs  tests.rs
precompiles/pallet-did/: Cargo.toml
precompiles/pallet-did/src/: lib.rs
precompiles/tusd/: Cargo.toml
precompiles/tusd/src/: lib.rs  mock.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/src/: lib.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/src/: data.rs  lib.rs  testing.rs  tests.rs
precompiles/utils/src/data/: xcm.rs
primitives/debug/: Cargo.toml
primitives/evm-tracing-events/: Cargo.toml
primitives/evm-tracing-events/src/: gasometer.rs  runtime.rs
primitives/ext/: Cargo.toml
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs  xcm_config.rs
runtime/devnet/: Cargo.toml  build.rs
runtime/devnet/integration-tests/: config.toml
runtime/devnet/integration-tests/customs/: compile.js  compile.ts  package.json  read-xc20-custom.ts  transfer-xc20-custom.ts
runtime/devnet/integration-tests/xcm/: 0_init.yml  2_reserve-transfer.yml  2_stmt-reserve-transfer.yml  3_send-to-reserve.yml  4_test-xc-20.yml  4_watr-xc-20.yml  6_watr-teleport.yml
runtime/devnet/src/: lib.rs  precompiles.rs  xcm_config.rs
runtime/devnet/src/weights/: cumulus_pallet_xcmp_queue.rs  frame-system.rs  frame_system.rs  mod.rs  pallet_assets.rs  pallet_balances.rs  pallet_block_reward.rs  pallet_collator_selection.rs  pallet_collective.rs  pallet_did.rs  pallet_identity.rs  pallet_membership.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_sudo.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs  pallet_xc_asset_config.rs  watr_collator_selection.rs
runtime/mainnet/: Cargo.toml  build.rs
runtime/mainnet/integration-tests/: config.toml
runtime/mainnet/integration-tests/customs/: compile.js  transfer-xc20-custom.ts
runtime/mainnet/integration-tests/xcm/: 1_hrmp-open-channels.yml  2_reserve-transfer.yml  3_send-to-reserve.yml  3_watr-send-to-reserve.yml  4_test-xc-20.yml  4_watr-xc-20.yml  8_stmt-teleport.yml
runtime/mainnet/src/: lib.rs  precompiles.rs  xcm_config.rs
runtime/mainnet/src/weights/: cumulus_pallet_xcmp_queue.rs  frame-system.rs  frame_system.rs  mod.rs  pallet_assets.rs  pallet_balances.rs  pallet_block_reward.rs  pallet_collator_selection.rs  (+14 more)
runtime/src/: lib.rs
runtime/watr/: Cargo.toml
runtime/watr/src/: lib.rs
scripts/: benchmarks-ci.sh  benchmarks.sh  export-genesis-state.sh  precompile-dispatch-call.js
scripts/dispatch-precompile/: balance-transfer.js  pallet-did.js
scripts/metamask-sign-data/: README.md  did-example.json  index.html  metamask-sign-data.js
zombienet-config/: devnet.toml  mainnet.toml  rococo-local-config.toml
zombienet-configs/: rococo-local-config.toml
