[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace]
members = [
	"node",
	"runtime/mainnet",
	"runtime/devnet",
	"pallets/motion",
	"precompiles/did",
	"pallets/did",

	"moonbeam/evm-tracing",
	"moonbeam/primitives/debug",
	"moonbeam/primitives/evm-tracing-events",
	"moonbeam/primitives/txpool",
	"moonbeam/rpc/debug",
	"moonbeam/rpc/trace",
	"moonbeam/rpc/txpool",
	"moonbeam/rpc-core/debug",
	"moonbeam/rpc-core/trace",
	"moonbeam/rpc-core/txpool",
	"moonbeam/rpc-core/types",
	"moonbeam/runtime/evm-tracer",
	"moonbeam/runtime/ext",

]

[workspace.dependencies]
# Utils
async-trait = "0.1.57"
clap = { version = "4.1.6", features = ["derive"] }
derive_more = "0.99.2"
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.4"
jsonrpsee = { version = "0.16.2", features = ["server"] }
rlp = "0.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
smallvec = "1.9.0"
tokio = { version = "1.24.2", features = ["macros", "sync"] }
tracing = "0.1.34"

# Utils (Wasm)
environmental = { version = "1.1.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4.17", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
parity-scale-codec = { version = "3.4.0", default-features = false }
sha3 = { version = "0.10.1", default-features = false }

# Watr
pallet-did = { path = "pallets/did", default-features = false }
pallet-did-precompile = { path = "precompiles/did", default-features = false }
pallet-motion = { path = "pallets/motion", default-features = false }
watr-common = { path = "runtime/common", default-features = false }
watr-devnet-runtime = { path = "runtime/devnet" }
watr-runtime = { path = "runtime/mainnet" }

# Substrate (Client)
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-network-sync = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0"}
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

# Substrate (Wasm)
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-support = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
scale-info = { version = "2.1.1", features = ["derive"], default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false  }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }

# Polkadot (Client)
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }

# Polkadot (Wasm)
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }

# Cumulus (Client)
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }

# Cumulus (Wasm)
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", version = "3.0.0", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
parachains-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }

# Frontier (Client)
fc-cli = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0" }
fc-consensus = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0" }
fc-db = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0" }
fc-mapping-sync = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0" }
fc-rpc = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", features = ["txpool"] }
fc-rpc-core = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0" }
fc-storage = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0" }

# Frontier (Wasm)
fp-consensus = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", default-features = false }
fp-evm = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", default-features = false }
fp-rpc = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", default-features = false }
fp-self-contained = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", default-features = false }
fp-storage = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", default-features = false }
pallet-base-fee = { git = 'https://github.com/paritytech/frontier', branch = "polkadot-v1.0.0", default-features = false }
pallet-ethereum = { git = 'https://github.com/paritytech/frontier', branch = "polkadot-v1.0.0", default-features = false }
pallet-evm = { git = 'https://github.com/paritytech/frontier', branch = "polkadot-v1.0.0", default-features = false }
pallet-evm-precompile-blake2 = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", default-features = false }
pallet-evm-precompile-bn128 = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", default-features = false }
pallet-evm-precompile-dispatch = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", default-features = false }
pallet-evm-precompile-modexp = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", default-features = false }
pallet-evm-precompile-sha3fips = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", default-features = false }
pallet-evm-precompile-simple = { git = 'https://github.com/paritytech/frontier.git', branch = "polkadot-v1.0.0", default-features = false }

# EVM & Ethereum
# (wasm)
# To make it compatible with frontier
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }
evm-gasometer = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }
evm-runtime = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }
ethereum-types = { version = "0.14", default-features = false }
ethereum = { version = "0.14.0", default-features = false }

# Astar (Wasm)
pallet-block-reward = { git = "https://github.com/Watr-Protocol/astar-frame", branch = "polkadot-v1.0.0", default-features = false}
pallet-evm-precompile-assets-erc20 = { git = "https://github.com/Watr-Protocol/astar-frame", branch = "polkadot-v1.0.0", default-features = false }
pallet-xc-asset-config = { git = "https://github.com/Watr-Protocol/astar-frame", branch = "polkadot-v1.0.0", default-features = false }
precompile-utils = { git = "https://github.com/Watr-Protocol/astar-frame", branch = "polkadot-v1.0.0", default-features = false }

# Moonbeam (Local)
evm-tracing-events = { path = "./moonbeam/primitives/evm-tracing-events" }
moonbeam-client-evm-tracing = { path = "./moonbeam/evm-tracing" }
moonbeam-primitives-ext = { path = "./moonbeam/runtime/ext"}
moonbeam-rpc-core-debug = { path = "./moonbeam/rpc-core/debug" }
moonbeam-rpc-core-types = { path = "./moonbeam/rpc-core/types" }
moonbeam-rpc-core-trace = { path = "./moonbeam/rpc-core/trace" }
moonbeam-rpc-core-txpool = { path = "./moonbeam/rpc-core/txpool" }
moonbeam-rpc-primitives-debug = { path = "./moonbeam/primitives/debug" }
moonbeam-rpc-primitives-txpool = { path = "./moonbeam/primitives/txpool" }